# simplex

./: .gitmodules  CMakeLists.txt  COPYING  README.md  configure  make
data/: basic.fsh  basic.vsh  beard.webm  block.fsh  block.vsh  materials.conf  sky.fsh  sky.vsh  ui.fsh  ui.vsh
src/: aabb.hpp  assets.cpp  assets.hpp  audio.hpp  chunk.cpp  chunk.hpp  chunksupport.hpp  colors.hpp  common.hpp  debugrnd.hpp  file.cpp  file.hpp  game.cpp  geo.cpp  geo.hpp  globber.hpp  hash.cpp  hash.hpp  hex.hpp  join.hpp  logging.cpp  logging.hpp  main.cpp  mapping.hpp  material.hpp  matrixstack.hpp  mesh.hpp  mesher.hpp  notify.hpp  os.cpp  os.hpp  player.cpp  player.hpp  print.hpp  rand.cpp  rand.hpp  region.cpp  region.hpp  render.cpp  render.hpp  (+15 more)
utils/: palette.py
