cmake_minimum_required(VERSION 2.8.12)
project(simplex)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories(${SDL2_INCLUDE_DIRS})
include_directories("src")
file(GLOB_RECURSE sources "src/*.cpp")
add_executable(simplex ${sources}) 
target_link_libraries(simplex ${SDL2_LIBRARIES})
