cmake_minimum_required(VERSION 2.8.12)
project(simplex)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -Wall -std=c++11")
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
# pkg_search_module(SDL2TTF REQUIRED SDL2_ttf)
pkg_search_module(SDL2IMG REQUIRED SDL2_image)
pkg_search_module(SDL2MIX REQUIRED SDL2_mixer)
find_package(OpenGL REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
# include_directories(${SDL2TTF_INCLUDE_DIRS})
include_directories(${SDL2IMG_INCLUDE_DIRS})
include_directories(${SDL2MIX_INCLUDE_DIRS})
include_directories(${OPENGL_INCLUDE_DIRS})

include_directories("src")
file(GLOB_RECURSE sources "src/*.cpp" "src/*.c")
add_executable(simplex ${sources}) 
target_link_libraries(simplex ${SDL2_LIBRARIES})
# target_link_libraries(simplex ${SDL2TTF_LIBRARIES})
target_link_libraries(simplex ${SDL2IMG_LIBRARIES})
target_link_libraries(simplex ${SDL2MIX_LIBRARIES})
target_link_libraries(simplex ${OPENGL_LIBRARIES})
